# einsum

./: .gitignore  Cargo.toml  README.md  current_benchmark_results.txt  index.html
benches/: bench.rs
src/: classifiers.rs  contractors.rs  iterators.rs  lib.rs  main.rs  optimizers.rs  slow_versions.rs  validation.rs  wasm_bindings.rs
src/contractors/: mod.rs  pair_contractors.rs  singleton_contractors.rs  strategies.rs
tests/: einsum_test.rs
wasm_stuff/: wasm_stuff.rs
