[package]
name = "einsum"
version = "0.1.0"
authors = ["oracleofnj <jared.samet@aya.yale.edu>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oracleofnj/einsum"
description = "Implementation of the einsum function for the Rust ndarray crate. As popularized in numpy, einsum (Einstein summation) implements general multidimensional tensor contraction. Many linear algebra operations and generalizations of those operations can be expressed as special cases of tensor contraction."
keywords = ["einsum", "einstein summation", "tensor", "contraction", "tensor contraction", "ndarray", "multidimensional", "linear algebra"]
categories = ["science"]

[dependencies]
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
ndarray = "0.12.1"
num-traits = "0.2.6"

# TODO: Move this back into dev-dependencies
ndarray-rand = "0.9.0"
rand="0.6"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
lto = true
opt-level = 's'
