[package]
name = "ndarray_einsum_beta"
version = "0.2.2"
authors = ["oracleofnj <jared.samet@aya.yale.edu>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oracleofnj/einsum"
description = "Implementation of the einsum function for the Rust ndarray crate. As popularized in numpy, einsum (Einstein summation) implements general multidimensional tensor contraction. Many linear algebra operations and generalizations of those operations can be expressed as special cases of tensor contraction."
keywords = ["einsum", "einstein-summation", "tensor", "contraction", "ndarray"]
categories = ["science"]

[dependencies]
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
ndarray = "0.12.1"
num-traits = "0.2.6"

[dev-dependencies]
ndarray-rand = "0.9.0"
rand="0.6"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
lto = true

[package.metadata.docs.rs]
rustdoc-args = [ "--document-private-items", "--no-deps", "--color=always" ]
