[package]
name = "ndarray_einsum_beta"
version = "0.5.0"
authors = ["oracleofnj <jared.samet@aya.yale.edu>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oracleofnj/einsum"
description = "Implementation of the einsum function for the Rust ndarray crate. As popularized in numpy, einsum (Einstein summation) implements general multidimensional tensor contraction. Many linear algebra operations and generalizations of those operations can be expressed as special cases of tensor contraction."
keywords = ["einsum", "einstein-summation", "tensor", "contraction", "ndarray"]
categories = ["science"]

[dependencies]
regex = "1"
lazy_static = "1"
ndarray = { version = "0.14", features = ["approx"] }
num-traits = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
approx = "0.4"
ndarray-rand = "0.13.0"
rand="0.8"

[profile.release]
debug = true
lto = true

[package.metadata.docs.rs]
rustdoc-args = [ "--document-private-items" ]
